--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@
   padding: 0;	
 }
 
+.highlight {
+background-color: gray;
+
+}
+
 #prompt-container {
   font-family: Courier New, Courier, monospace;
   font-size: 24px;
