--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,11 @@ background-color: gray;
 
 #yellow-block {
   position: absolute;
-  margin-top: 10px;
-  width: 15px;
+  margin-top: 9px;
   height: 15px;
+  width: 15px;
   background-color: yellow;
+  
 }
 
 .keyboard-container {
@@ -38,10 +39,10 @@ background-color: gray;
 #feedback {
   font-size: 20px;
 }
-.glyphicon-ok {
+.glyphicon-thumbs-up {
   color: #1DA237
 }
 
-.glyphicon-remove {
+.glyphicon-thumbs-down {
   color : #CD2626
 }
